--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -5,9 +5,11 @@
         "install": "Install",
         "installationCount": "More than 30 people like you have installed this app!",
         "calculation": "Calculation",
+        "calculationText": "Calculate coordinates using a calculation system based on distance and orientation",
         "calculationSlogan": "From nowhere to anywhere in 5 clicks",
         "calculationSteps": "Calculate any location worldwide in just 5 steps:\n• Click 'Use my location' to detect your current position\n• Enter your desired distance\n• Set your desired orientation\n• Hit 'Calculate'\n• Either tap 'Send to Compass' or copy your new coordinates",
         "compass": "Compass",
+        "compassText": "Reach your destination with a compass navigation system - no network required",
         "compassSlogan": "From anywhere to the right place - just a compass, no clicks",
         "compassSteps":"Either inserting the coordinates you want or calculating them you will always get to the place you want without need to worry:\n• Reach your exact destination within one meter of accuracy, without needing cell signals\n• Our smart system automatically keeps you on track, so you can navigate smoothly and reliably",
         "accuracy": "Accuracy",
