--- a/src/locale/pt.json
+++ b/src/locale/pt.json
@@ -15,7 +15,7 @@
         "accuracy": "Precisão",
         "precision": "Graus de precisão",
         "levelText": "Um nível para indicar a inclinação",
-        "useCases": "Exemplos de uso",
+        "useCases": "Exemplos de utilização",
         "useCasesText": "Eis alguns casos de utilização em que o QuickCoords pode ser útil",
         "campsite": "Encontrar um acampamento",
         "campsiteSteps": "Utilize o QuickCoords para regressar em segurança ao seu acampamento após um dia de exploração\n",
