--- a/src/locale/pt.json
+++ b/src/locale/pt.json
@@ -23,7 +23,7 @@
         "mountainSteps": "Utilize o QuickCoords para determinar a sua localização num percurso, assegurando que se mantém no rumo certo com a bússola incorporada\n",
         "questions": "Perguntas a responder",
         "questionPaid": "O QuickCoords é pago?",
-        "questionPaidText": "O QuickCoords é totalmente gratuito e não tem anúncios.\n Achamos que os utilizadores merecem uma boa aplicação gratuita e sem anúncios a estragar a experiência do utilizador. Nunca sabemos o futuro, mas se um dia a aplicação tiver uma subscrição, tentaremos que seja acessível e que valha a pena.",
+        "questionPaidText": "O QuickCoords é totalmente gratuito e não tem anúncios.\n Achamos que os utilizadores merecem uma boa aplicação gratuita e sem anúncios a perturbar a experiência do utilizador. Nunca sabemos o futuro, mas se um dia a aplicação tiver uma subscrição, tentaremos que seja acessível e que valha a pena.",
         "questionIOS": "Porque é que não existe uma versão IOS?",
         "questionIOSText": "Não há QuickCoords para dispositivos IOS porque o preço para submeter uma aplicação à App Store é elevado, mas se no futuro a nossa base de utilizadores crescer, lançaremos uma versão IOS.",
         "questionStandout": "Como é que o QuickCoords se destaca das outras aplicações?",
